fixed the overflow so buttons at the bottom are visible

--- a/chrome/skin/accountProvisioner.css
+++ b/chrome/skin/accountProvisioner.css
@@ -119,7 +119,7 @@ button:active {
   -moz-border-radius: 5px;
   -moz-box-shadow: 0 0 2px rgba(0,0,0,0.75) inset;
   margin-bottom: 10px;
-  overflow: hidden;
+  overflow: visible;
 }
 
 #search {
